Added description button, edited CSS.

--- a/src/index.css
+++ b/src/index.css
@@ -8,11 +8,15 @@
 article {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  background-color: #4ab7e1;
+  border-radius: 3rem;
+  border: thick double #32a1ce;
+  margin: 1.5px;
 }
 .container {
   width: 70vw;
-  background: var(--clr-white);
   max-width: var(--fixed-width);
+  margin: 0 auto;
 }
 @media only screen and (max-width: 600px) {
   .container {
@@ -29,7 +33,7 @@ article {
     width: 80vw;
   }
 }
-.col-4 {
+.mincol {
   background-color: rgb(217, 233, 246);
   border-radius: 10px;
   border: double thick #32a1ce;
@@ -44,24 +48,19 @@ article {
   max-height: 25vh;
 }
 h3 {
-  font-size: 1.6rem;
+  font-size: 1.4rem;
 }
 h4 {
   font-size: 1.1rem;
 }
-main {
-    background-color: rgb(205, 139, 91);
-}
-.section {
-    width: 90vw;
-    margin-bottom: 5px;
-    max-width: var(--max-width);
-}
 .btn {
-    box-shadow: 1px 3px 5px black;
-    color: white;
+  box-shadow: 1px 3px 5px black;
+  color: white;
+  margin-top: 2.5px;
 }
-.col {
-    background-color: #4ab7e1;
-    border-radius: 10px;
+.btn-danger {
+  max-width: 25vw;
+}
+.background {
+  background-color: saddlebrown;
 }
