--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,7 @@ article {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   background-color: #4ab7e1;
+  background: radial-gradient(circle, rgb(93, 93, 214) 0%, rgb(191, 236, 244) 100%);
   border-radius: 3rem;
   border: thick double #32a1ce;
   margin: 1.5px;
@@ -66,7 +67,8 @@ h4 {
   max-width: 25vw;
 }
 .background {
-  background-color: saddlebrown;
+  background-image: url("../Images/884431-popular-dungeons-and-dragons-wallpapers-2560x1600-for-windows-10.jpg");
+  background-size:auto;
 }
 .Header {
   justify-content: center;
@@ -79,4 +81,9 @@ h4 {
   border-width: 5px;
   border-bottom-left-radius: 30px;
   border-bottom-right-radius: 30px;
+  background: radial-gradient(circle, rgb(205, 52, 65) 0%, rgb(235, 147, 54) 100%);
+  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  color: rgb(237, 187, 59);
+  text-shadow: 3px 3px 3px rgb(80, 36, 4);
+  margin-bottom: 5px;
 }
