--- a/src/index.css
+++ b/src/index.css
@@ -23,22 +23,9 @@ article {
   text-size-adjust: inherit;
 }
 
-@media only screen and (max-width: 600px) {
-  .container {
-    width: 85vw;
-  }
-}
-@media only screen and (max-width: 768px) {
-  .container {
-    width: 85vw;
-  }
-}
-@media only screen and (min-width: 768px) and (max-width: 992px) {
-  .container {
-    width: 80vw;
-  }
-}
+
 .mincol {
+  min-width: 130px;
   background-color: rgb(217, 233, 246);
   border-radius: 10px;
   border: double thick #32a1ce;
@@ -53,10 +40,10 @@ article {
   max-height: 25vh;
 }
 h3 {
-  font-size: 1.4rem;
+  font-size: 1.4em;
 }
 h4 {
-  font-size: 1.1rem;
+  font-size: 1.1em;
 }
 .btn {
   box-shadow: 1px 3px 5px black;
@@ -86,4 +73,13 @@ h4 {
   color: rgb(237, 187, 59);
   text-shadow: 3px 3px 3px rgb(80, 36, 4);
   margin-bottom: 5px;
+}
+
+/* Media Screen Sizes */
+
+@media only screen and (max-width: 768px) {
+  /* For mobile phones: */
+  [class*="col-"] {
+    width: 100%;
+  }
 }
