--- a/src/index.css
+++ b/src/index.css
@@ -12,12 +12,12 @@ article {
   background: radial-gradient(circle, rgb(93, 93, 214) 0%, rgb(191, 236, 244) 100%);
   border-radius: 3rem;
   border: thick double #32a1ce;
-  margin: 1.5px;
+  margin: 2px;
 }
 .container {
   width: 70vw;
   max-width: var(--fixed-width);
-  margin: 0 auto;
+  justify-content: center;
   grid-template-columns: auto 1fr;
   text-align: center;
   text-size-adjust: inherit;
@@ -48,10 +48,13 @@ h4 {
 .btn {
   box-shadow: 1px 3px 5px black;
   color: white;
-  margin-top: 2.5px;
+  margin: 2.5px;
 }
 .btn-danger {
   max-width: 25vw;
+}
+.btn-warning {
+  margin-left: 10px;
 }
 .background {
   background-image: url("../Images/884431-popular-dungeons-and-dragons-wallpapers-2560x1600-for-windows-10.jpg");
@@ -81,5 +84,9 @@ h4 {
   /* For mobile phones: */
   [class*="col-"] {
     width: 100%;
+  }
+  .btn-warning {
+    width: 90%;
+    margin-left: 30px;
   }
 }
