--- a/src/index.css
+++ b/src/index.css
@@ -85,8 +85,14 @@ h4 {
   [class*="col-"] {
     width: 100%;
   }
-  .btn-warning {
-    width: 90%;
-    margin-left: 30px;
+  .row {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
 }
